tmp/cloudbees-cd/cloudbees-flow/templates/repository-deployment.yaml
---
# Source: cloudbees-flow/templates/repository-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flow-repository
  labels:
    app: flow-repository
    chart: cloudbees-flow
    release: cloudbees-cd
    heritage: Helm
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: flow-repository
      release: cloudbees-cd
  template:
    metadata:
      labels:
        app: flow-repository
        release: cloudbees-cd
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: default
      containers:
        - name: flow-repository
          image: "docker.io/cloudbees/cbflow-repository:10.2.1.150122_3.0_20210802"
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8200
            name: p3-repository
            protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 8200
            initialDelaySeconds: 120
            periodSeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            exec:
              command: ["/opt/cbflow/health-check"]
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 0.25
              memory: 1024Mi
            requests:
              cpu: 0.25
              memory: 512Mi
          volumeMounts:
          - name: repository-data-volume
            mountPath: /repository-data
          - name: logback-config
            mountPath: /custom-config/repository/logback-local.groovy
            subPath: repository-logback-config
      volumes:
      - name: repository-data-volume
        persistentVolumeClaim:
           claimName: flow-repo-artifacts
      - name: logback-config
        configMap:
          name: flow-logging-config
