tmp/cloudbees-cd/cloudbees-flow/templates/repository-service.yaml
---
# Source: cloudbees-flow/templates/repository-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flow-repository
  labels:
    app: flow-repository
    chart: cloudbees-flow
    release: cloudbees-cd
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - name: ef-repository
      port: 8200
      protocol: TCP
      targetPort: p3-repository
  selector:
    app: flow-repository
    release: cloudbees-cd
